# mock-llm-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
mock_llm_mcp/: server.py
